message not available

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Samuel Emeka's Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Samuel Emeka's Portfolio" name="keywords">
-    <meta content="Samuel Emeka's Portfolio" name="description">
+    <meta content="Samuel Emeka JW" name="keywords">
+    <meta content="Samuel Emeka Web Developer" name="keywords">
+    <meta content="Samuel Emeka SJHS" name="keywords">
+    <meta content="Samuel Emeka Ikeja" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -322,7 +325,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Marketing</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Editing</li>
                     </ul>
                 </div>
             </div>
