message not available

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta content="Samuel Emeka JW" name="keywords">
     <meta content="Samuel Emeka Web Developer" name="keywords">
     <meta content="Samuel Emeka SJHS" name="keywords">
+    <meta content="ndobisam" name="keywords">
     <meta content="Samuel Emeka Ikeja" name="description">
 
     <!-- Favicon -->
