--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
 
     <!-- Blog Start -->
-    <div class="container-fluid pt-5" id="blog">
+    <!-- <div class="container-fluid pt-5" id="blog">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Blog</h1>
@@ -479,7 +479,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Blog End -->
 
 
