message not available

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="Samuel Emeka Web Developer" name="keywords">
     <meta content="Samuel Emeka SJHS" name="keywords">
     <meta content="aficionadosam" name="keywords">
-    <meta content="Samuel Emeka Ikeja" name="description">
+    <meta content="Samuel Emeka's Portfolio" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -538,7 +538,7 @@
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/sammy.young.188478/"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/samuel-emeka-80061525b/"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.tiktok.com/@webaficionado?lang=en"><i class="fab fa-tiktok"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.tiktok.com/@webaficionado"><i class="fa fa-tiktok"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://discord.gg/Phe4qB6Mrf"><i class="fab fa-discord"></i></a>
                 <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
             </div>
@@ -551,7 +551,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="http://viewsamuelemeka.netlify.app">Samuel Emeka</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="http://viewsamuelemeka.netlify.app">Samuel Emeka</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">Samuel Emeka</a>
             </p>
         </div>
     </div>
