message not available

--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Master In CSE</h5>
                             <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <p>Driven by a passion for technology and innovation, I'm a Master in Computer Science from Cambridge University. Ready to solve the world's toughest tech challenges!</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Senior Secondary School Certificate Holder</h5>
+                            <p class="mb-2"><strong>State Senior High School Alimosho</strong> | <small>2018 - 2022</small></p>
+                            <p>Ready to take on the world and make a difference. A motivated learner and problem-solver who is passionate about making an impact.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Theocratic Ministry School </h5>
+                            <p class="mb-2"><strong>Jehovah's Witnesses</strong> | <small>2000 - 2050</small></p>
+                            <p>Dedicated to equipping others with spiritual knowledge and love for Jehovah. #TheocraticMinistrySchool #JehovahsWitnesses</p>
                         </div>
                     </div>
                 </div>
@@ -172,20 +172,20 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2021 - date</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <p class="mb-2"><strong>Creative Web Nigeria</strong> | <small>2021 - date</small></p>
+                            <p>Crafting beautiful digital experiences that make a lasting impression. Let me help you create the perfect website for your business - @CreativeWebNigeria</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Developer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2021 - date</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <p class="mb-2"><strong>Creative Web Nigeria</strong> | <small>2021 - date</small></p>
+                            <p>Web Developer with Creative Web Nigeria, creating innovative digital experiences. Passionate about developing cutting-edge websites and web applications that engage users.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Video Editor</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2021 - date</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <p class="mb-2"><strong>Creative Web Nigeria/strong> | <small>2021 - date</small></p>
+                            <p>Unlocking creativity and giving life to stories. Let's create something special together. #VideoEditor #CreativeWebNigeria</p>
                         </div>
                     </div>
                 </div>
