message not available

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore eirmod erat clita</p>
+                    <p>Crafting powerful digital experiences. We create stunning web designs that are both functional and visually appealing, helping bring your vision to life.</p>
                     <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-12 text-center mb-5">
@@ -288,15 +288,7 @@
                         <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Web Development</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-                </div>
-                <div class="col-lg-4 col-md-12 text-center mb-5">
-                    <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">Content Creating</h4>
-                    </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore eirmod erat clita</p>
+                    <p>Crafting digital experiences with a blend of art and science. We specialize in web development to make the web more beautiful, secure and user-friendly.</p>
                     <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-12 text-center mb-5">
@@ -304,7 +296,7 @@
                         <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Video Editing</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore eirmod erat clita</p>
+                    <p>Crafting stories with visuals. I'm a video editor with a passion for creating cinematic masterpieces that tell a story. Ready to take your content to the next level? Let's do this!</p>
                     <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
             </div>
@@ -409,24 +401,24 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4">Working with Samuel Emeka has been an absolute pleasure. He is incredibly knowledgeable and detail-oriented, always giving his best and going above and beyond for any task given to him. On top of that, he has a great work ethic, never shying away from challenges. I highly recommend working with Samuel Emeka - he is the best!</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h5 class="font-weight-bold m-0">Natalie Starr</h5>
+                            <span></span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4">I've had the pleasure of working with Samuel Emeka for the last two years and he is simply the best! He is a very hard worker, always willing to go above and beyond to get the job done. His creative ideas are always spot-on and his finished work is flawless. Samuel Emeka is one of a kind and I'm so lucky to have worked with him!</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h5 class="font-weight-bold m-0">Jeff Clinton</h5>
+                            <span>Business</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                            <h4 class="font-weight-light mb-4">I have had the pleasure of working with Samuel Emeka for the past few months and I am truly amazed by his hard work. He is always willing to stay late and put in extra effort to get the job done. He is also great at problem solving and coming up with creative solutions. Overall, he is a great asset to any team.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h5 class="font-weight-bold m-0">Brandon James</h5>
+                            <span>Gamer</span>
                         </div>
                     </div>
                 </div>
