--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta content="Samuel Emeka's Portfolio" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/fbprof2.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
