message not available

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-light mb-4">Working with Samuel Emeka has been an absolute pleasure. He is incredibly knowledgeable and detail-oriented, always giving his best and going above and beyond for any task given to him. On top of that, he has a great work ethic, never shying away from challenges. I highly recommend working with Samuel Emeka - he is the best!</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                            <h5 class="font-weight-bold m-0">Natalie Starr</h5>
+                            <h5 class="font-weight-bold m-0">Billy Graham</h5>
                             <span></span>
                         </div>
                         <div class="text-center">
@@ -411,14 +411,14 @@
                             <h4 class="font-weight-light mb-4">I've had the pleasure of working with Samuel Emeka for the last two years and he is simply the best! He is a very hard worker, always willing to go above and beyond to get the job done. His creative ideas are always spot-on and his finished work is flawless. Samuel Emeka is one of a kind and I'm so lucky to have worked with him!</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">Jeff Clinton</h5>
-                            <span>Business</span>
+                            <span>Gamer</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <h4 class="font-weight-light mb-4">I have had the pleasure of working with Samuel Emeka for the past few months and I am truly amazed by his hard work. He is always willing to stay late and put in extra effort to get the job done. He is also great at problem solving and coming up with creative solutions. Overall, he is a great asset to any team.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">Brandon James</h5>
-                            <span>Gamer</span>
+                            <span>Business</span>
                         </div>
                     </div>
                 </div>
