--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="http://viewsamuelemeka.netlify.app">Samuel Emeka</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">Samuel Emeka</a>
+            <p class="m-0">&copy;2023<a class="text-white font-weight-bold" href="http://viewsamuelemeka.netlify.app">Samuel Emeka</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">Samuel Emeka</a>
             </p>
         </div>
     </div>
