message not available

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/sammy.young.188478/"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/samuel-emeka-80061525b/"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.tiktok.com/@webaficionado"><i class="fa fa-tiktok"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.tiktok.com/@webaficionado"><i class="fab fa-tiktok"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://discord.gg/Phe4qB6Mrf"><i class="fab fa-discord"></i></a>
                 <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
             </div>
