--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <a href="https://lorahosthosting.netlify.app/">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
+                            <img class="img-fluid rounded w-100" src="img/lorahost.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://lorahosthosting.netlify.app/">
                                     <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -367,7 +367,7 @@
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <a href="https://estatenrds.netlify.app/">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="">
+                            <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://estatenrds.netlify.app/">
                                     <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
