--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/lorahost.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="https://lorahosthosting.netlify.app/">
+                                <a href="https://lorahosthosting.netlify.app/" target="_blank">
                                     <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                                 </a>
                             </div>
@@ -369,7 +369,7 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="https://estatenrds.netlify.app/">
+                                <a href="https://estatenrds.netlify.app/" target="_blank">
                                     <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                                 </a>
                             </div>
