--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                             <img class="img-fluid rounded w-100" src="img/lorahost.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://lorahosthosting.netlify.app/" target="_blank">
-                                    <i class="text-white" style="font-size: 60px;">Live Preview</i>
+                                    <i class="text-white text-center" style="font-size: 30px;">Live Preview</i>
                                 </a>
                             </div>
                         </div>
@@ -370,7 +370,7 @@
                             <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://estatenrds.netlify.app/" target="_blank">
-                                    <i class="text-white" style="font-size: 60px;">Live Preview</i>
+                                    <i class="text-white text-center" style="font-size: 30px;">Live Preview</i>
                                 </a>
                             </div>
                         </div>
