--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Editing</li>
+                        <!-- <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Editing</li> -->
                     </ul>
                 </div>
             </div>
