edited portfolio section

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">PHP</h6>
+                            <h6 class="font-weight-bold">Webflow</h6>
                             <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
@@ -278,11 +278,11 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Wordpress</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">Vue</h6>
+                            <h6 class="font-weight-bold">30%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="30" aria-valuemin="0"
                                 aria-valuemax="100"></div>
                         </div>
                     </div>
@@ -308,7 +308,7 @@
                     </div>
                     <p>Crafting powerful digital experiences. We create stunning web designs that are both functional
                         and visually appealing, helping bring your vision to life.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-12 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -317,7 +317,7 @@
                     </div>
                     <p>Crafting digital experiences with a blend of art and science. We specialize in web development to
                         make the web more beautiful, secure and user-friendly.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-12 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -326,7 +326,7 @@
                     </div>
                     <p>Crafting stories with visuals. I'm a video editor with a passion for creating cinematic
                         masterpieces that tell a story. Ready to take your content to the next level? Let's do this!</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
             </div>
         </div>
@@ -357,8 +357,8 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/lorahost.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="https://lorahosthosting.netlify.app/" target="_blank">
-                                    <i class="text-white text-center" style="font-size: 30px;">Live Preview</i>
+                                <a href="https://lorahosthosting.netlify.app/" target="_blank" class="text-decoration-none">
+                                    <span class="text-white text-center border-bottom-0" style="font-size: 20px;">Live Preview</span>
                                 </a>
                             </div>
                         </div>
@@ -369,14 +369,14 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="https://estatenrds.netlify.app/" target="_blank">
-                                    <i class="text-white text-center" style="font-size: 30px;">Live Preview</i>
+                                <a href="https://estatenrds.netlify.app/" target="_blank" class="text-decoration-none">
+                                    <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
                                 </a>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <!-- <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -385,7 +385,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="">
